--- a/manuscripts/24-jb-dags/24-jb-experiments.tex
+++ b/manuscripts/24-jb-dags/24-jb-experiments.tex
@@ -188,7 +188,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={On Confounding in Experiments},
+  pdftitle={Confounding in Experiments},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -197,7 +197,7 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{On Confounding in Experiments}
+\title{Confounding in Experiments}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-05-17}
+\date{2024-05-24}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -297,14 +297,15 @@ It is the ``effect.''
 
 \textbf{\(U\)}: Denotes an unmeasured confounder or confounders.
 
-\textbf{\(\mathcal{R}\)}: Denotes a randomisation or a chance event, as
-when treatment assignment is random.
+\textbf{\(\mathcal{R}\)}: Denotes a randomisation to treatment
+condition.
 
-\textbf{\(\mathcal{G}\)}: Denotes a graph, here, a causal directed
-acyclic graph.
-
-\subsubsection{Elements of causal
-graphs}\label{elements-of-causal-graphs}
+\textbf{\(\mathcal{G}\)}: Denotes a causal graph, here, either a causal
+DAG, Single World Intervention Graph. We will also use this symbol to
+denote a Single World Intervention Template, which is a function for
+generating Single World Intevention Graphs. This jargon will become
+clear when the graphical tools are explained. \#\#\# Elements of causal
+graphs
 
 \textbf{Node}: a node or vertex represents characteristics or features
 of units within a population on a causal diagram -- that is a
@@ -315,18 +316,19 @@ whom investigators seek causal inferences
 node: \(X_t\) denotes relative chronology
 
 \textbf{Edge without an Arrow} (\(\association\)): path of association,
-causality not asserted.
+we do not assert causality.
 
 \textbf{Arrow} (\(\rightarrowNEW\)): denotes causal relationship from
-the node at the base of the arrow (a parent) to the node at the tip of
-the arrow (a child). We typically refrain from drawing an arrow from
-treatment to outcome to avoid asserting a causal path from \(A\) to
-\(Y\) because the function of a causal directed acyclic graph is to
-evaluate whether causality can be identified for this path.
+the node at the base of the arrow (a `parent') to the node at the tip of
+the arrow (a `child'). In causal DAGS it is conventional to refrain from
+drawing an arrow from treatment to outcome to avoid asserting a causal
+path from \(A\) to \(Y\) because iyr purpose is to ascertain whether
+causality can be identified for this path. All other nodes and paths --
+including the absence of nodes and paths -- is typically assumed.
 
 \textbf{Red Arrow} (\(\rightarrowred\)): path of non-causal association
-between the treatment and outcome. Path is associational and may run
-against arrows.
+between the treatment and outcome. Despite the arrows, this path is
+associational and may flow against time.
 
 \textbf{Dashed Arrow} (\(\rightarrowdotted\)): denotes a true
 association between the treatment and outcome that becomes partially
