--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -188,7 +188,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={The Transformation of The Obvious: Moderation, Interaction, Mediation, and Time-Varying Treatments},
+  pdftitle={The Transformation of The Obvious: Causal Inference for Interaction, Mediation, and Time-Varying Treatments},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -197,8 +197,8 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{The Transformation of The Obvious: Moderation, Interaction,
-Mediation, and Time-Varying Treatments}
+\title{The Transformation of The Obvious: Causal Inference for
+Interaction, Mediation, and Time-Varying Treatments}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -211,7 +211,7 @@ Mediation, and Time-Varying Treatments}
       
 
 
-\date{2024-05-23}
+\date{2024-05-24}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -223,10 +223,9 @@ ambiguous, despite model sophistication. We emphasise the necessity of
 (1) clearly stating a causal question and (2) assessing the
 identifiability of the question with available data before statistical
 analysis. Without these steps, confusion is inevitable. Properly framing
-and addressing causal questions, especially in settings with
-heterogeneous and multiple treatments, reveals the limitations of
-popular methods and guides researchers towards more effective
-approaches.
+and addressing causal question of interaction, mediation, and
+time-varying treatments reveals the limitations of popular methods and
+guides researchers towards more effective approaches.
 
 \textbf{KEYWORDS}: \emph{Causal Inference}; \emph{SWIGs}; \emph{DAGs};
 \emph{Evolution}; \emph{Mediation}; \emph{Longitudinal Growth};
@@ -235,65 +234,61 @@ approaches.
 
 \subsection{Introduction}\label{introduction}
 
-The young Charles Darwin was a keen fossil hunter and and amateur
-geologist. In August 1831, he accompagnied the geologist Adam Sedwick to
-the Glyderau mountain range in northern Wales.
+The young Charles Darwin was a keen fossil hunter and amateur geologist.
+In August 1831, he accompanied the geologist Adam Sedgwick to the
+Glyderau mountain range in northern Wales.
 
 \begin{quote}
-We spent many hours in Cwm Idwal, examining all the rocks with extreme
-care, as Sedgwick was anxious to find fossils in them; but neither of us
-saw a trace of the wonderful glacial phenomena all around us; we did not
-notice the plainly scored rocks, the perched boulders, the lateral and
-terminal moraines. Yet these phenomena are so conspicuous that, \ldots{}
-a house burnt down by fire did not tell its story more plainly than did
-this valley. If it had still been filled by a glacier, the phenomena
-would have been less distinct than they now are.
-(\citeproc{ref-darwin1887life}{Darwin 1887}: p.25)
+{[}N{]}either of us saw a trace of the wonderful glacial phenomena all
+around us; we did not notice the plainly scored rocks, the perched
+boulders, the lateral and terminal moraines. Yet these phenomena are so
+conspicuous that \ldots{} a house burnt down by fire did not tell its
+story more plainly than did this valley. If it had still been filled by
+a glacier, the phenomena would have been less distinct than they now
+are. (\citeproc{ref-darwin1887life}{Darwin 1887}: p.25)
 \end{quote}
 
 This `striking instance of how easy it is to overlook phenomena, however
-conspicuous' (\citeproc{ref-darwin1887life}{Darwin 1887}: p.25). Dawin's
-example is cited in the cultural evolution to emphasise the importance
-of theory for organising observations
-(\citeproc{ref-wilson2008evolution}{Wilson 2008}). However, the
-importance of theory to scientific discovery carries even broader
-relevance, and applies to the statistical methods scientists routinely
-apply to the data they collect. Lacking a clear framework that relates
-statistical models to observations, the understanding we seek remains
-elusive.
+conspicuous' (\citeproc{ref-darwin1887life}{Darwin 1887}: p.25) is cited
+in cultural evolution to emphasise the importance of theory for
+organising observations (\citeproc{ref-wilson2008evolution}{Wilson
+2008}). However, the importance of theory to scientific discovery
+carries even broader relevance: it applies to the statistical methods
+scientists routinely apply to the data they collect. Without a clear
+framework that relates statistical models to observations, the
+understanding we seek from our data remains elusive.
 
 Across many human sciences, we apply statistical models to data and
 report `moderation', `interaction', `mediation', and `longitudinal
 growth'. How are we to interpret the results of these models? It is
 often unclear. The confidence with which investigators report findings
 does not make interpretation any clearer. The problem is that
-investigators are typically interested in causal question. However, if
-the conditional associations that our models produce suggest causality
-this is accidental. Indeed, the conditional association that such models
-produce do not provide evidence for \emph{associations}. That is, the
-signs of the coeffients in our statistical models and the patterns of
-association captured in data may be spurious and inverted
-(\citeproc{ref-westreich2013}{Westreich and Greenland 2013}).
-Association is not evidence for association, much less causation.
+investigators are typically interested in causal questions. However, if
+the conditional associations that our models produce suggest causality,
+this is accidental. Indeed, the conditional associations such models
+produce hallucinate correlations and their signs
+(\citeproc{ref-westreich2013}{Westreich and Greenland 2013}). It is
+often unclear whether association is evidence for association.
 
 There is good news. Progress in the health sciences, computer science,
 and economics has led to a common vocabulary with robust workflows that
 allow investigators to formulate causal questions that may be addressed
-with data, to evaluate the assumptions under which consistent estimate
+with data, to evaluate the assumptions under which consistent estimates
 may be obtained, to construct valid statistical estimators of these
 quantities, and then -- at the end of the workflow -- to apply
-statistical models. This conceputal framework in anchored in a
-foundation of mathematical proofs that enables investigators to clarify,
+statistical models. This conceptual framework is anchored in a
+foundation of mathematical proofs that enable investigators to clarify,
 communicate, and evaluate their differences. The consensus that has
-emerged during the past several decades is as wide ranging in its
+emerged during the past several decades is as wide-ranging in its
 implications for causal inference as the theory of glaciation was to
 geology, or as Darwin's theory of evolution was to biology.
 
 There are several excellent resources available that clarify workflows
-for causal inference from stating causal questions through the steps to
+for causal inference, from stating causal questions through to
 communicating results (\citeproc{ref-hernan2024WHATIF}{Hernan and Robins
 2024}; \citeproc{ref-tlverse_handbook}{Laan \emph{et al.} 2023};
 \citeproc{ref-montgomery2018}{Montgomery \emph{et al.} 2018};
+\citeproc{ref-morgan2014}{Morgan and Winship 2014};
 \citeproc{ref-neal2020introduction}{Neal 2020};
 \citeproc{ref-pearl2009a}{Pearl 2009}; \citeproc{ref-grf2024}{Tibshirani
 \emph{et al.} 2024}; \citeproc{ref-vanderweele2015}{VanderWeele 2015}).
@@ -301,22 +296,21 @@ communicating results (\citeproc{ref-hernan2024WHATIF}{Hernan and Robins
 Here, our ambition is modest.
 
 \textbf{Part 1} considers how to ask causal questions when our interest
-is comparing effect magnitudes between groups (effect-modification)
+is in comparing effect magnitudes between groups (effect-modification).
 
 \textbf{Part 2} considers how to ask causal questions when our interest
-is evaluating whether the joint effects of two independent interventions
-(interaction),
+is in evaluating the joint effects of two independent interventions
+(interaction).
 
-\textbf{Part 3}: considers how to ask causal questions when our interest
-is in evaluating whethe the joint effects of two dependent interventions
-(mediation analysis)
+\textbf{Part 3} considers how to ask causal questions when our interest
+is in evaluating the joint effects of two dependent interventions
+(mediation analysis).
 
-\textbf{Part 4}: considers how to ask causal questions when our interest
+\textbf{Part 4} considers how to ask causal questions when our interest
 is in evaluating two or more sequential treatments of the same kind
 (time-varying treatments).
 
-We begin with a brief introduction to terminology (for more detail,
-refer to (\citeproc{ref-bulbulia2023}{Bulbulia 2023})).
+We begin with a brief introduction to terminology.
 
 \subsubsection{Basic concepts}\label{basic-concepts}
 
@@ -798,7 +792,7 @@ is:
 \]
 
 We say there is effect modification on the difference scale if: \[
-\text{ATE}_{Z = 1} \neq \text{ATE}_{Z = 0} \implies \mu_{11} - \mu_{01} neq \mu_{10} - \mu_{00}
+\text{ATE}_{Z = 1} \neq \text{ATE}_{Z = 0} \implies \mu_{11} - \mu_{01} \neq \mu_{10} - \mu_{00}
 \]
 
 We say there is effect modification on the ratio scale if: \[
@@ -1813,10 +1807,10 @@ algorithm is:
   Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\). For each
   timepoint we recover a set of future counterfactual variables that
   includes the outcome under the treat regime under consideration,
-  \(Y(\mathbold{\tilde{g}})\) but which also includes other variables
-  that the treatment might affect, including future treatments. All
-  backdoor paths must be closed to each member of this set of
-  counterfactual variables.
+  \(Y(\mathbf{\tilde{g}})\) but which also includes other variables that
+  the treatment might affect, including future treatments. All backdoor
+  paths must be closed to each member of this set of counterfactual
+  variables.
 \end{enumerate}
 
 Where:
@@ -1869,50 +1863,109 @@ policy. For example, if the treatment regime sets individuals to their
 observed treatment values, then the natural value of treatment is
 equivalent to the measured treatment. In this setting, potential
 outcomes would be estimated as a fixed regime with weaker positivity
-assumptions.
+assumptions. For example with a continuous intervention we must estimate
+an effect such as setting the intervention only if the observed
+treatment does not reach a specific threshold:
 
-Readers should be aware that within the causal inference literature,
-there are debates about identification under time-varying treatments
-(refer to Richardson and Robins
-(\citeproc{ref-richardson2023potential}{2023}); Richardson and Robins
-(\citeproc{ref-richardson2013}{2013a}); Dı́az \emph{et al.}
-(\citeproc{ref-Diaz2023}{2023}); Rudolph \emph{et al.}
-(\citeproc{ref-rudolph2024mediation}{2024}); Shpitser \emph{et al.}
-(\citeproc{ref-shpitser2022multivariate}{2022})). However, all agree
-that it is sufficient for identification to condition on covariate
-histories at intervention, ensuring all treatments---whether fixed or
-modified---are conditionally independent of future counterfactual
-outcomes.
+\[
+\mathbf{g}^\phi (A_i) = \begin{cases}  \mu_A & \text{if } A_i < \mu_A \\ 
+A_i & \text{otherwise} \end{cases}
+\]
 
-Hence if the treatment at each measurement time is conditionally
-independent of \emph{all} counterfactual
+Which is a weaker intervention than, for example than:
+
+\[
+\mathbf{g}^\lambda (A_i) = \begin{cases}   \mu_A  & \text{if } A_i \neq \mu_A   \\ 
+A_i & \text{otherwise} \end{cases}
+\]
+
+Wherease \(\mathbf{g}^\lambda\) sets everyone in the population to the
+same treatment level, \(\mathbf{g}^\phi\) sets only those below a
+certain threshold of a fixed level but does not estimate treatment
+effects for those above (\citeproc{ref-hoffman2023}{Hoffman \emph{et
+al.} 2023}). It is also possible to write stochastic treatment functions
+(\citeproc{ref-diaz2021nonparametric}{Dı́az \emph{et al.} 2021};
+\citeproc{ref-diaz2012population}{Muñoz and Van Der Laan 2012};
+\citeproc{ref-vanderweele2014a}{VanderWeele and Vansteelandt 2014};
+\citeproc{ref-young2014identification}{Young \emph{et al.} 2014}).
+
+Of course the details of every problem should be developed in relation
+to a scientific context, and whatever practical questions relate to gaps
+in present science. However, causal inference teaches us anything is
+that the questions we ask -- seemingly coherent and tractable questions
+such as whether marriage makes people happy -- require considerable
+attention to make interpretable. When such questions are made
+interpretable, causal inference reveals that answers might elude us, no
+matter the quality and abudance of our data, or whether we randomise
+interventions. For many scientific and practical questions modest
+treatment functions might may be more credible and helpful.
 
 \subsection{Conclusions}\label{conclusions}
 
-The interest in causality is ancient. Democritus wrote, `(I would)
-rather discover one cause than gain the kingdom of Persia'
-(\citeproc{ref-freeman1948ancilla}{Freeman 1948}). Hume gave a general
-account of causality by referencing counterfacutuals.
-
-However, it was not until Jerzy Nehyman's master's thesis that
-considered causality in agricultural experiments that a quantitative
-understanding of causality was formalised
-(\citeproc{ref-neyman1923}{Splawa-Neyman \emph{et al.} 1990}). Neyhman's
-work went largely unnoticed until the 1970s, when the Harvard
-Statistician Donald Rubin formalised what became known as the Rubin
-Causal Model (also the Rubin-Neyman Causal Model)
+The interest in causality is ancient. Democritus wrote, `I would rather
+discover one cause than gain the kingdom of Persia'
+(\citeproc{ref-freeman1948ancilla}{Freeman 1948}). Hume provided a
+general account of causality by referencing counterfactuals: `\ldots{}
+where, if the first object had not been, the second never would have
+existed' (\citeproc{ref-hume1902}{Hume 1902}). However, it was not until
+Jerzy Neyman's master's thesis that a quantitative analysis of causality
+was formalised (\citeproc{ref-neyman1923}{Splawa-Neyman \emph{et al.}
+1990}). Remarkably, Neyman's work went largely unnoticed until the 1970s
+when Harvard statistician Donald Rubin formalised what became known as
+the `Rubin Causal Model' (also the Rubin-Neyman Causal Model)
 (\citeproc{ref-holland1986}{Holland 1986};
-\citeproc{ref-rubin1976}{Rubin 1976}). In 1986 the Harvard statistician
-James Robins extended the potential outcomes framework to time-varying
-treatments (\citeproc{ref-robins1986}{Robins 1986}). This work formed
-the basis a powerful. Judea Pearl introduced directed causal acyclic
-graphs (causal DAGs) Pearl (\citeproc{ref-pearl1995}{1995}), which made
-addressing identification problems transparent and accessible to
-non-specialists. Robins and Richardson extended Pearl's graphical models
-(building on Robin's earlier graphical models and conceptual framework
-his Robins (\citeproc{ref-robins1986}{1986})) to enable evaluating
-counterfactual causal contrasts on graphs. After stating a causal
-question,
+\citeproc{ref-rubin1976}{Rubin 1976}).
+
+In 1986, Harvard statistician James Robins extended the potential
+outcomes framework to time-varying treatments, laying the foundation for
+powerful new longitudinal data science methods
+(\citeproc{ref-robins1986}{Robins 1986}). Judea Pearl introduced
+directed acyclic graphs (causal DAGs), which made addressing
+identification problems transparent and accessible to non-specialists
+(\citeproc{ref-pearl1995}{Pearl 1995}). Robins and Richardson extended
+Pearl's graphical models, building on Robins' earlier work, to evaluate
+counterfactual causal contrasts on graphs. Concurrently, the foundations
+of the causal revolution in economics were being established, creating a
+fertile frontier in causal data sciences. By the early 2000s, targeted
+learning frameworks were being developed
+(\citeproc{ref-vanderlaan2011}{Van Der Laan and Rose 2011}), along with
+causal mediation analysis methods (\citeproc{ref-pearl2009a}{Pearl
+2009}; \citeproc{ref-robins1992}{Robins and Greenland 1992};
+\citeproc{ref-rudolph2024mediation}{Rudolph \emph{et al.} 2024};
+\citeproc{ref-vanderweele2015}{VanderWeele 2015};
+\citeproc{ref-vanderweele2014a}{VanderWeele and Vansteelandt 2014};
+\citeproc{ref-vansteelandt2012}{Vansteelandt \emph{et al.} 2012};
+\citeproc{ref-diaz2023}{\textbf{diaz2023?}}), and techniques for
+analysing time-varying treatments
+(\citeproc{ref-diaz2012population}{Muñoz and Van Der Laan 2012};
+\citeproc{ref-richardson2013}{Richardson and Robins 2013a},
+\citeproc{ref-richardson2023potential}{2023};
+\citeproc{ref-robins1986}{Robins 1986};
+\citeproc{ref-robins2008estimation}{Robins and Hernan 2008};
+\citeproc{ref-robins1999}{Robins \emph{et al.} 1999};
+\citeproc{ref-shpitser2022multivariate}{Shpitser \emph{et al.} 2022};
+\citeproc{ref-young2014identification}{Young \emph{et al.} 2014}).
+
+Readers should be aware that within the causal inference literature,
+there are vigorous debates. However, there is a shared consensus about
+its foundations, and a common conceptual and mathematical vocabulary
+within which to express disagreements and accumulate progress---a
+hallmark of a productive science.
+
+Although the causal revolution is progressing and gaining momentum, many
+areas of human science have yet to participate and benefit. The
+necessity for researchers to acquire new skills, coupled with the
+intensive requirement for data collection, has significant implications
+for research design, funding, and the accepted pace of scientific
+publishing. To foster essential changes in causal inference education
+and practice, the human sciences need to shift from a predominantly
+output-focused, correlation-reporting culture to a slow, careful,
+creative culture that promotes retraining and funds time-series data
+collection. Such investments are worthwhile. Much as Darwin's theory
+transformed the biological sciences from speculative taxonomy, causal
+inference will transform the human sciences from butterfly collections
+of correlations to causal inferential sciences capable of addressing the
+causal questions that animate our curiosities.
 
 \subsection{Funding}\label{funding}
 
@@ -1925,10 +1978,6 @@ decision to publish it.
 \subsection{Acknowledgements}\label{acknowledgements}
 
 Errors are my own.
-
-\subsection{Appendix B: On the Relevance of Effect Modification for
-External (Target)
-Validity.}\label{appendix-b-on-the-relevance-of-effect-modification-for-external-target-validity.}
 
 \subsection{Appendix A: Glossary}\label{appendix-a-glossary}
 
@@ -1943,6 +1992,310 @@ Validity.}\label{appendix-b-on-the-relevance-of-effect-modification-for-external
 }
 
 \end{table}%
+
+\subsection{Appendix B: R Simulation to Clarify Why The Distribution of
+Effect Modifiers Matter For Estimating Treatment Effects For A Target
+Population}\label{appendix-b-r-simulation-to-clarify-why-the-distribution-of-effect-modifiers-matter-for-estimating-treatment-effects-for-a-target-population}
+
+First, we load the \texttt{stdReg} library, which obtains marginal
+effect estimates by simulating counterfactuals under different levels of
+treatment (\citeproc{ref-sjuxf6lander2016}{Sjölander 2016}). If a
+treatment is continuous, the levels can be specified.
+
+We also load the \texttt{parameters} library, which creates nice tables
+(\citeproc{ref-parameters2020}{\textbf{parameters2020?}}).
+
+Next, we write a function to simulate data for the sample and and target
+populations.
+
+We assume the treatment effect is the same in the sample and target
+population. We will assume that the coefficient for the effect-modifier
+and the coefficient for interaction are the same. We assume no
+unmeasured confounding throughout the study. We assume only selective
+attrition of one effect modifier such that the baseline population
+differs from the sample population at the end of the study.
+
+That is: \textbf{the distribution of effect modifiers is the only
+respect in which the sample will differ from the target population.}
+
+This function will generate data under a range of scenarios.\footnote{See
+  documentation in the \texttt{margot} package: Bulbulia
+  (\citeproc{ref-margot2024}{2024})}
+
+\begin{longtable}[]{@{}ll@{}}
+\caption{Data summary}\tabularnewline
+\toprule\noalign{}
+\endfirsthead
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+Name & data \\
+Number of rows & 100000 \\
+Number of columns & 7 \\
+\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \\
+Column type frequency: & \\
+numeric & 7 \\
+\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \\
+Group variables & None \\
+\end{longtable}
+
+\textbf{Variable type: numeric}
+
+\begin{longtable}[]{@{}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.3053}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.1053}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.1474}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.0526}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.0526}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.0632}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.0526}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.0526}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.0526}}
+  >{\raggedleft\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.0526}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 20\tabcolsep) * \real{0.0632}}@{}}
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+skim\_variable
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+n\_missing
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+complete\_rate
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+mean
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+sd
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+p0
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+p25
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+p50
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+p75
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedleft
+p100
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+hist
+\end{minipage} \\
+\midrule\noalign{}
+\endhead
+\bottomrule\noalign{}
+\endlastfoot
+sample\_data.y\_sample & 0 & 1 & 0.74 & 1.08 & -1.71 & 0.01 & 0.59 &
+1.21 & 5.21 & ▂▇▃▁▁ \\
+sample\_data.a\_sample & 0 & 1 & 0.49 & 0.50 & 0.00 & 0.00 & 0.00 & 1.00
+& 1.00 & ▇▁▁▁▇ \\
+sample\_data.z\_sample & 0 & 1 & 0.09 & 0.29 & 0.00 & 0.00 & 0.00 & 0.00
+& 1.00 & ▇▁▁▁▁ \\
+sample\_data.weights & 0 & 1 & 0.98 & 1.30 & 0.56 & 0.56 & 0.56 & 0.56 &
+5.00 & ▇▁▁▁▁ \\
+population\_data.y\_population & 0 & 1 & 1.88 & 1.60 & -2.09 & 0.51 &
+1.76 & 3.26 & 6.01 & ▁▇▆▆▁ \\
+population\_data.a\_population & 0 & 1 & 0.50 & 0.50 & 0.00 & 0.00 &
+1.00 & 1.00 & 1.00 & ▇▁▁▁▇ \\
+population\_data.z\_population & 0 & 1 & 0.50 & 0.50 & 0.00 & 0.00 &
+1.00 & 1.00 & 1.00 & ▇▁▁▁▇ \\
+\end{longtable}
+
+We have generated both sample and population data.
+
+Next, we verify that the distributions of effect modifiers differ in the
+sample and in the target population:
+
+\begin{verbatim}
+
+   0    1 
+9055  945 
+\end{verbatim}
+
+\begin{verbatim}
+
+    0     1 
+49916 50084 
+\end{verbatim}
+
+The sample and population distributions differ.
+
+Next, consider the question: ``What are the differences in the
+coefficients that we obtain from the study population at the end of
+study, as compared with the those we would obtain for target
+population?''
+
+First, we obtain the regression coefficients for the sample. They are as
+follows:
+
+\begin{verbatim}
+Parameter           | Coefficient |       SE |        95% CI | t(9996) |      p
+-------------------------------------------------------------------------------
+(Intercept)         |   -6.89e-03 | 7.38e-03 | [-0.02, 0.01] |   -0.93 | 0.350 
+a sample            |        1.01 |     0.01 | [ 0.99, 1.03] |   95.84 | < .001
+z sample            |        2.47 |     0.02 | [ 2.43, 2.52] |  104.09 | < .001
+a sample × z sample |        0.51 |     0.03 | [ 0.44, 0.57] |   14.82 | < .001
+\end{verbatim}
+
+We next obtain the regression coefficients for the weighted regression
+of the sample. Notice that the coefficients are virtually the same:
+
+\begin{verbatim}
+Parameter           | Coefficient |        95% CI |      p
+----------------------------------------------------------
+(Intercept)         |   -6.89e-03 | [-0.03, 0.01] | 0.480 
+a sample            |        1.01 | [ 0.98, 1.04] | < .001
+z sample            |        2.47 | [ 2.45, 2.50] | < .001
+a sample × z sample |        0.51 | [ 0.47, 0.55] | < .001
+
+Model: y_sample ~ a_sample * z_sample (10000 Observations)
+Residual standard deviation: 0.494 (df = 9996)
+\end{verbatim}
+
+We might be tempted to infer that weighting wasn't relevant to the
+analysis. However, we'll see that such an interpretation would be a
+mistake.
+
+Next, we obtain model coefficients for the population. Note again there
+is no difference -- only narrower errors owing to the large sample size.
+
+\begin{verbatim}
+Parameter                   | Coefficient |       SE |        95% CI | t(99996) |      p
+----------------------------------------------------------------------------------------
+(Intercept)                 |    2.49e-03 | 3.18e-03 | [ 0.00, 0.01] |     0.78 | 0.434 
+a population                |        1.00 | 4.49e-03 | [ 0.99, 1.01] |   222.35 | < .001
+z population                |        2.50 | 4.49e-03 | [ 2.49, 2.51] |   556.80 | < .001
+a population × z population |        0.50 | 6.35e-03 | [ 0.49, 0.51] |    78.80 | < .001
+\end{verbatim}
+
+Again, there is no difference. That is, we find that all model
+coefficients are practically equivalent. The different distribution of
+effect modifiers does not result in different coefficient values for the
+treatment effect, the effect-modifier ``effect,'' or the interaction of
+effect modifier and treatment.
+
+Consider why this is the case: in a large sample where the causal
+effects are invariant -- as we have simulated them to be -- we will have
+good replication in the effect modifiers within the sample, so our
+statistical model can recover the \emph{coefficients} for the population
+without challenge.
+
+However, \emph{in causal inference, we are interested in the marginal
+effect of the treatment. That is, we seek an estimate for the
+counterfactual }contrast* in which everyone in a pre-specified
+population was subject to one level of treatment compared with a
+counterfactual condition in which everyone in a population was subject
+to another level of the same treatment.
+
+\textbf{When the sample population differs in the distribution of effect
+modifiers from the target population effect, the marginal effect
+estimates will typically differ.}
+
+To see this, we use the \texttt{stdReg} package to recover marginal
+effect estimates, comparing (1) the sample ATE, (2) the true oracle ATE
+for the population, and (3) the weighted sample ATE. We will use the
+outputs of the same models above. The only difference is that we will
+calculate marginal effects from these outputs. We will contrast a
+difference from an intervention in which everyone receives treatment = 0
+with one in which everyone receives treatment = 1, however, this choice
+is arbitrary, and the general lessons apply irrespective of the
+estimand.
+
+First, consider this Average Treatment Effect for the sample population.
+
+\begin{verbatim}
+
+Formula: y_sample ~ a_sample * z_sample
+Family: gaussian 
+Link function: identity 
+Exposure:  a_sample 
+Reference level:  a_sample = 0 
+Contrast:  difference 
+
+  Estimate Std. Error lower 0.95 upper 0.95
+0     0.00     0.0000       0.00       0.00
+1     1.06     0.0101       1.04       1.08
+\end{verbatim}
+
+The treatment effect is given as a 1.06 unit change in the outcome
+across the sample population, with a confidence interval from 1.04 to
+1.08.
+
+Next, we obtain the true (oracle) treatment effect for the population
+under the same intervention.
+
+\begin{verbatim}
+
+Formula: y_population ~ a_population * z_population
+Family: gaussian 
+Link function: identity 
+Exposure:  a_population 
+Reference level:  a_population = 0 
+Contrast:  difference 
+
+  Estimate Std. Error lower 0.95 upper 0.95
+0     0.00    0.00000       0.00       0.00
+1     1.25    0.00327       1.24       1.26
+\end{verbatim}
+
+Note, the true treatment effect is a 1.25 unit change in the population,
+with a confidence bound between 1.24 and 1.26. This is well outside the
+ATE that we obtain from the sample population!
+
+Next, consider the ATE in the weighted regression, where the sample was
+weighted to the target population's true distribution of effect
+modifiers.
+
+\begin{verbatim}
+
+Formula: y_sample ~ a_sample * z_sample
+Family: gaussian 
+Link function: identity 
+Exposure:  a_sample 
+Reference level:  a_sample = 0 
+Contrast:  difference 
+
+  Estimate Std. Error lower 0.95 upper 0.95
+0     0.00     0.0000       0.00       0.00
+1     1.25     0.0172       1.22       1.29
+\end{verbatim}
+
+We find that we obtain the population-level causal effect estimate with
+accurate coverage by weighting the sample to the target population. So
+with appropriate weights, our results generalise from the sample to the
+target population.
+
+\subsection{Lessons}\label{lessons}
+
+\begin{itemize}
+\tightlist
+\item
+  Regression coefficients do not clarify the problem of sample/target
+  population mismatch -- or selection bias as discussed in this
+  manuscript.
+\item
+  The correct advice to investigators is that they should not rely on
+  regression coefficients when evaluating the biases that arise from
+  sample attrition. This advice applies to both methods that the authors
+  use to investigate threats of bias. That is, to implement this advice,
+  the authors must first take it.
+\item
+  Generally, observed data are insufficient for assessing threats.
+  Observed data do not clarify structural sources of bias, nor do they
+  clarify effect-modification in the full counterfactual data condition
+  in which all receive the treatment and all do not receive the
+  treatment (at the same level).
+\item
+  To properly assess bias, one would need access to the counterfactual
+  outcome---what would have happened to the missing participants had
+  they not been lost to follow-up or had they responded. Again, the join
+  distributions over ``full data'' are inherently unobservable
+  (\citeproc{ref-vanderlaan2011}{Van Der Laan and Rose 2011}).
+\item
+  In simple settings like the one we just simulated, we may address the
+  gap between the sample and target population using methods such as
+  modelling the censoring (e.g., censoring weighting). However, we never
+  know what setting we are in or whether it is simple---such modelling
+  must be handled with care. There is a large and growing epidemiology
+  literature on this topic (see, for example, Li \emph{et al.}
+  (\citeproc{ref-li2023non}{2023})).
+\end{itemize}
 
 \subsection{Appendix C On the Clarity of Single World Intervention
 Graphs}\label{appendix-c-on-the-clarity-of-single-world-intervention-graphs}
@@ -2079,6 +2432,11 @@ acyclic graphs}. Retrieved from
 Bulbulia, JA (2023) Causal diagrams (directed acyclic graphs): A
 practical guide.
 
+\bibitem[\citeproctext]{ref-margot2024}
+Bulbulia, JA (2024) \emph{Margot: MARGinal observational
+treatment-effects}.
+doi:\href{https://doi.org/10.5281/zenodo.10907724}{10.5281/zenodo.10907724}.
+
 \bibitem[\citeproctext]{ref-chatton2020}
 Chatton, A, Le Borgne, F, Leyrat, C, \ldots{} Foucher, Y (2020)
 G-computation, propensity score-based methods, and targeted maximum
@@ -2149,11 +2507,22 @@ doi:\href{https://doi.org/10.1001/jamanetworkopen.2022.34425}{10.1001/jamanetwor
 Holland, PW (1986) Statistics and causal inference. \emph{Journal of the
 American Statistical Association}, \textbf{81}(396), 945--960.
 
+\bibitem[\citeproctext]{ref-hume1902}
+Hume, D (1902) \emph{Enquiries Concerning the Human Understanding: And
+Concerning the Principles of Morals}, Clarendon Press.
+
 \bibitem[\citeproctext]{ref-tlverse_handbook}
 Laan, M van der, Coyle, J, Hejazi, N, Malenica, I, Phillips, R, and
 Hubbard, A (2023) \emph{Targeted learning in r: Causal data science with
 the tlverse software ecosystem}, Collins Foundation Press. Retrieved
 from \url{https://tlverse.org/tlverse-handbook/index.html}
+
+\bibitem[\citeproctext]{ref-li2023non}
+Li, W, Miao, W, and Tchetgen Tchetgen, E (2023) Non-parametric inference
+about mean functionals of non-ignorable non-response data without
+identifying the joint distribution. \emph{Journal of the Royal
+Statistical Society Series B: Statistical Methodology}, \textbf{85}(3),
+913--935.
 
 \bibitem[\citeproctext]{ref-mcelreath2020}
 McElreath, R (2020) \emph{Statistical rethinking: A {B}ayesian course
@@ -2165,6 +2534,17 @@ posttreatment variables can ruin your experiment and what to do about
 It. \emph{American Journal of Political Science}, \textbf{62}(3),
 760--775.
 doi:\href{https://doi.org/10.1111/ajps.12357}{10.1111/ajps.12357}.
+
+\bibitem[\citeproctext]{ref-morgan2014}
+Morgan, SL, and Winship, C (2014) \emph{Counterfactuals and causal
+inference: Methods and principles for social research}, 2nd edn,
+Cambridge: Cambridge University Press.
+doi:\href{https://doi.org/10.1017/CBO9781107587991}{10.1017/CBO9781107587991}.
+
+\bibitem[\citeproctext]{ref-diaz2012population}
+Muñoz, ID, and Van Der Laan, M (2012) Population intervention causal
+effects based on stochastic interventions. \emph{Biometrics},
+\textbf{68}(2), 541--549.
 
 \bibitem[\citeproctext]{ref-neal2020introduction}
 Neal, B (2020) Introduction to causal inference from a machine learning
@@ -2199,10 +2579,22 @@ with a sustained exposure period---application to control of the healthy
 worker survivor effect. \emph{Mathematical Modelling}, \textbf{7}(9-12),
 1393--1512.
 
+\bibitem[\citeproctext]{ref-robins2008estimation}
+Robins, J, and Hernan, M (2008) Estimation of the causal effects of
+time-varying exposures. \emph{Chapman \& Hall/CRC Handbooks of Modern
+Statistical Methods}, 553--599.
+
 \bibitem[\citeproctext]{ref-robins1992}
 Robins, JM, and Greenland, S (1992) Identifiability and exchangeability
 for direct and indirect effects. \emph{Epidemiology}, \textbf{3}(2),
 143--155.
+
+\bibitem[\citeproctext]{ref-robins1999}
+Robins, JM, Greenland, S, and Hu, F-C (1999) Estimation of the causal
+effect of a time-varying exposure on the marginal mean of a repeated
+binary outcome. \emph{Journal of the American Statistical Association},
+\textbf{94}(447), 687--700.
+doi:\href{https://doi.org/10.1080/01621459.1999.10474168}{10.1080/01621459.1999.10474168}.
 
 \bibitem[\citeproctext]{ref-robins2004effects}
 Robins, JM, Hernán, MA, and SiEBERT, U (2004) Effects of multiple
@@ -2238,6 +2630,12 @@ Shpitser, I, Richardson, TS, and Robins, JM (2022) Multivariate
 counterfactual systems and causal graphical models. In
 \emph{Probabilistic and causal inference: The works of {J}udea {P}earl},
 813--852.
+
+\bibitem[\citeproctext]{ref-sjuxf6lander2016}
+Sjölander, A (2016) Regression standardization with the R package
+stdReg. \emph{European Journal of Epidemiology}, \textbf{31}(6),
+563--574.
+doi:\href{https://doi.org/10.1007/s10654-016-0157-3}{10.1007/s10654-016-0157-3}.
 
 \bibitem[\citeproctext]{ref-neyman1923}
 Splawa-Neyman, J, Dabrowska, DM, and Speed, TP (1990) On the application
@@ -2355,6 +2753,12 @@ Wilson, DS (2008) Evolution and religion: The transformation of the
 obvious. In J. Bulbulia, R. Sosis, E. Harris, R. Genet, C. Genet, and K.
 Wyman, eds., \emph{The evolution of religion: Studies, theories, \&
 critiques}, Santa Margarita, CA: Collins Foundation Press, 23--29.
+
+\bibitem[\citeproctext]{ref-young2014identification}
+Young, JG, Hernán, MA, and Robins, JM (2014) Identification, estimation
+and approximation of risk under interventions that depend on the natural
+value of treatment using observational data. \emph{Epidemiologic
+Methods}, \textbf{3}(1), 1--19.
 
 \end{CSLReferences}
 
