--- a/manuscripts/24-jb-dags/24-jb-dags.tex
+++ b/manuscripts/24-jb-dags/24-jb-dags.tex
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-05-17}
+\date{2024-05-24}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -542,7 +542,7 @@ Setting these considerations aside, understanding how randomisation
 obtains the missing counterfactual outcomes that we require to
 consistently estimate average treatment effects clarifies the tasks of
 causal inference in non-experimental settings
-(\citeproc{ref-hernuxe1n2008a}{Hernán \emph{et al.} 2008};
+(\citeproc{ref-hernuxe1n2008a}{Hernán \emph{et al.} 2008a};
 \citeproc{ref-hernuxe1n2022}{Hernán \emph{et al.} 2022};
 \citeproc{ref-hernuxe1n2006}{Hernán and Robins 2006a}).
 
@@ -799,8 +799,8 @@ of an exposure (or treatment) \(A\) on an outcome \(Y\).
 \textbf{\(\bar{X}\)}: Denotes a sequence of variables, for example, a
 sequence of treatments.
 
-\textbf{\(\mathcal{R}\)}: Denotes a randomisation or a chance event, as
-when treatment assignment is random.
+\textbf{\(\mathcal{R}\)}: Denotes a randomisation to treatment
+condition.
 
 \textbf{\(\mathcal{G}\)}: Denotes a graph, here, a causal directed
 acyclic graph.
@@ -1915,8 +1915,8 @@ VanderWeele (\citeproc{ref-vanderweele2015}{2015}))
 Treatments}\label{treatment-confounder-feedback-in-sequential-treatments}
 
 Table~\ref{tbl-chronology-notenough} \(\mathcal{G} 6\) illustrates the
-threat of treatment confounder feedback in sequntial treatments. Suppose
-we are interested in whether beliefs in big gods affect social
+threat of treatment confounder feedback in sequential treatment regimes.
+Suppose we are interested in whether beliefs in big gods affect social
 complexity, suppose that beliefs in big gods affect economic trade, and
 that economic trade may affect beliefs in big gods and social
 complexity. Suppose the historical record is fragmented such that there
@@ -1998,16 +1998,13 @@ Contrast & Believe once first vs.~Believe once second &
 We can compute six causal contrasts for these four fixed regimens, as
 shown in Table~\ref{tbl-regimens}.
 
-A limitation of directed causal diagrams is that we do not project
-factorisations of the counterfactual contrasts. To evaluate
-counterfactual identification we may use Single World Intervention
-Graphs (refer to Robins and Richardson
+A limitation of directed acyclic causal diagrams is that we do not
+project factorisations of the counterfactual contrasts onto the graphs
+themselves. To evaluate counterfactual identification, it can be helpful
+to use Single World Intervention Graphs (refer to Robins and Richardson
 (\citeproc{ref-robins2010alternative}{2010}); Richardson and Robins
 (\citeproc{ref-richardson2013swigsprimer}{2013b}); Richardson and Robins
-(\citeproc{ref-richardson2023potential}{2023})). These causal graphs are
-especially helpful if the treatments to be compared are not fixed, but
-vary as functions of past interventions. We unfortunately do not have
-space here to cover single world intervention graphs.
+(\citeproc{ref-richardson2023potential}{2023})).
 
 \subsubsection{4.7 Collider Stratification Bias in Sequential
 Treatments}\label{collider-stratification-bias-in-sequential-treatments}
@@ -2091,7 +2088,7 @@ coefficients we obtain from statistical models we develop to estimate
 causal effects will typically not have a marginal interpretation unless
 we employ marginal structural models (refer to Cole and Hernán
 (\citeproc{ref-cole2008}{2008}); VanderWeele
-(\citeproc{ref-vanderweele2009a}{2009})). This structural implication
+(\citeproc{ref-vanderweele2009a}{2009b})). This structural implication
 has wide-ranging implications for scientific reporting. For example, if
 regression coefficients are reported at all, they should be reported
 with clearly labelled warnings against intretating them as having any
@@ -2275,8 +2272,9 @@ confoudning on our causal graphs. Rejecting causal inferences in
 observational settings entirely would be unwise because there are many
 examples in which they closely approximate randomised control trials
 (refer to Hernán \emph{et al.} (\citeproc{ref-hernan2016}{2016b});
-Hernán and Robins (\citeproc{ref-hernan2006estimating}{2006b});
-(\citeproc{ref-hernan2008aObservationalStudiesAnalysedLike}{\textbf{hernan2008aObservationalStudiesAnalysedLike?}}))
+Hernán and Robins (\citeproc{ref-hernan2006estimating}{2006b}); Hernán
+\emph{et al.}
+(\citeproc{ref-hernan2008aObservationalStudiesAnalysedLike}{2008b}))
 
 For example, return to Table~\ref{tbl-chronology-notenough}
 \(\mathcal{G} 2.1\) we encountered intractable confounding. What if
@@ -2447,90 +2445,229 @@ questions}\label{examples-of-common-causal-questions}
 
 \end{table}%
 
-\subsection{Effect Modification}\label{effect-modification}
+\subsection{Appendix C: Causal Inference in History: The Difficulty In
+Satisfying the Three Fundamental
+Assumptions}\label{appendix-c-causal-inference-in-history-the-difficulty-in-satisfying-the-three-fundamental-assumptions}
 
-\begin{table}
+Consider the Protestant Reformation of the 16\(^{th}\) century, which
+initiated religious change throughout much of Europe. Historians have
+argued that Protestantism caused social, cultural, and economic changes
+in those societies where it took hold; see: Weber
+(\citeproc{ref-weber1905}{1905}); Weber
+(\citeproc{ref-weber1993}{1993}); Swanson
+(\citeproc{ref-swanson1967}{1967}); Swanson
+(\citeproc{ref-swanson1971}{1971}); Basten and Betz
+(\citeproc{ref-basten2013}{2013}), and for an overview see: Becker
+\emph{et al.} (\citeproc{ref-becker2016}{2016}).
 
-\caption{\label{tbl-common-interests}representing effect modification}
+Suppose we were interested in estimating the `Average Treatment Effect'
+of the Protestant Reformation. Let \(A = a^*\) denote the adoption of
+Protestantism. We compare this effect with that of remaining Catholic,
+represented as \(A = a\). We assume that both the concepts of `adopting
+Protestantism' and of `economic development' are well-defined (e.g.~GDP
++1 century after a country has a Protestant majority contrasted with
+remaining Catholic). The causal effect for any individual country is
+\(Y_i(a^*) - Y_i(a)\). Although we cannot identify this effect, if the
+basic assumptions of causal inference are met, we can estimate the
+average or marginal effect conditioning the confounding effects of \(L\)
+gives us,
 
-\centering{
+\[ATE_{\textnormal{economic~development}} = \mathbb{E}[Y(\textnormal{Became~Protestant}|L) - Y(\textnormal{Remained~Catholic}|L)]\]
 
-\terminologyeffectmodification
+When asking causal questions about the economic effect of adopting
+Protestantism versus remaining Catholic, there are several challenges
+that arise in relation to the three fundamental assumptions required for
+causal inference.
 
-}
+\textbf{Causal Consistency}: requires the outcome under each level of
+exposure is well-defined. In this context, defining what `adopting
+Protestantism' and `remaining Catholic' mean may present challenges. The
+practices and beliefs associated with each religion might vary
+significantly across countries and time periods, and it may be difficult
+to create a consistent, well-defined exposure. Furthermore, the outcome
+- economic development - may also be challenging to measure consistently
+across different countries and time periods.
 
-\end{table}%
+There is undoubtedly considerable heterogeneity in the `Protestant
+exposure.' In England, Protestantism was closely tied to the monarchy
+(\citeproc{ref-collinson2003}{Collinson 2003}). In Germany, Martin
+Luther's teachings emphasised individual faith in scripture, which, it
+has been claimed, supported economic development by promoting literacy
+(\citeproc{ref-gawthrop1984}{Gawthrop and Strauss 1984}). In England,
+King Henry VIII abolished Catholicism
+(\citeproc{ref-collinson2003}{Collinson 2003}). The Reformation, then,
+occurred differently in different places. The exposure needs to be
+better-defined.
 
-\begin{table}
+There is also ample scope for interference: 16th century societies were
+interconnected through trade, diplomacy, and warfare. Thus, the
+religious decisions of one society were unlikely to have been
+independent from those of other societies.
 
-\caption{\label{tbl-common-interests}Common causal questions}
+\textbf{Exchangeability}: requires that given the confounders, the
+potential outcomes are independent of the treatment assignment. It might
+be difficult to account for all possible confounders in this context.
+For example, historical, political, social, and geographical factors
+could influence both a country's religious affiliations and its economic
+development.
 
-\centering{
+\textbf{Positivity}: requires that there is a non-zero probability of
+every level of exposure for every strata of confounders. If we consider
+various confounding factors such as geographical location, historical
+events, or political circumstances, some countries might only ever have
+the possibility of either remaining Catholic or becoming Protestant, but
+not both. For example, it is unclear under which conditions 16th century
+Spain could have been randomly assigned to Protestantism
+(\citeproc{ref-nalle1987}{Nalle 1987}).
 
-\terminologyeffectmodificationtypes
+Perhaps a more credible measure of effect in the region of our interests
+is the Average Treatment Effect in the Treated (ATT) expressed:
 
-}
+\[ATT_{\textnormal{economic~development}} = \mathbb{E}[(Y(a*)- Y(a)|A = a*,L]\]
 
-\end{table}%
+Where \(Y(a*)\) represents the potential outcome if treated. \(Y(a)\)
+represents the potential outcome if not treated. The expectation is
+taken over the distribution of the treated units (i.e., those for whom
+\(A = a*\)). \(L\) is a set of covariates on which we condition to
+ensure that the potential outcomes \(Y(a*)\) and \(Y(a)\) are
+independent of the treatment assignment \(A\), given \(L\). This
+accounts for any confounding factors that might bias the estimate of the
+treatment effect.
+
+Here, the ATT defines the expected difference in economic success for
+cultures that became Protestant compared with the expected economic
+success if those cultures had not become Protestant, conditional on
+measured confounders \(L\), among the exposed (\(A = a^*\)). To estimate
+this contrast, our models would need to match Protestant cultures with
+comparable Catholic cultures effectively. By estimating the ATT, we
+would avoid the assumption of non-deterministic positivity for the
+untreated. However, whether matching is conceptually plausible remains
+debatable. Ostensibly, it would seem that assigning a religion to a
+culture is not as easy as administering a pill
+(\citeproc{ref-watts2018}{Watts \emph{et al.} 2018}).
 
 \newpage{}
 
-\subsection{Appedix C:}\label{appedix-c}
+\subsection{Apendix C:}\label{apendix-c}
 
-\subsection{Time-varying Confounding: Causal
-Mediation}\label{time-varying-confounding-causal-mediation}
+\subsubsection{Appendix A: Causal Consistency Under Multiple Versions of
+Treatment}\label{appendix-a-causal-consistency-under-multiple-versions-of-treatment}
 
-\begin{table}
+To better understand how the causal consistency assumption might fail,
+consider a question that has been discussed in the evolutionary human
+science literature about whether a society's beliefs in big Gods affects
+its development of social complexity (\citeproc{ref-beheim2021}{Beheim
+\emph{et al.} 2021}; \citeproc{ref-johnson2015}{Johnson 2015};
+\citeproc{ref-norenzayan2016}{Norenzayan \emph{et al.} 2016};
+\citeproc{ref-sheehan2022}{Sheehan \emph{et al.} 2022};
+\citeproc{ref-slingerland2020coding}{Slingerland \emph{et al.} 2020};
+\citeproc{ref-watts2015}{Watts \emph{et al.} 2015};
+\citeproc{ref-whitehouse2023}{Whitehouse \emph{et al.} 2023}).
+Historians and anthropologists report that such beliefs vary over time
+and across cultures in intensity, interpretations, institutional
+management, and rituals (\citeproc{ref-bulbuliaj.2013}{Bulbulia, J.
+\emph{et al.} 2013}; \citeproc{ref-decoulanges1903}{De Coulanges 1903};
+\citeproc{ref-geertz2013}{Geertz \emph{et al.} 2013};
+\citeproc{ref-wheatley1971}{Wheatley 1971}). Knowing nothing else, we
+might expect that variation in content and settings could influence
+social complexity. Moreover, the treatments realised in one society
+might affect the treatments realised in other societies, that is, there
+might be \emph{spill-over} effects in the exposures (`treatments') to be
+compared (\citeproc{ref-murray2021a}{Murray \emph{et al.} 2021};
+\citeproc{ref-shiba2023uncovering}{Shiba \emph{et al.} 2023}).
 
-\caption{\label{tbl-mediation}Anatomy of bias in mediation analysis:
-statistical SEM fails.}
+The theory of causal inference under multiple versions of treatment,
+developed by VanderWeele and Hernán, formally addresses this challenge
+of treatment-effect heterogeneity
+(\citeproc{ref-vanderweele2009}{VanderWeele 2009a},
+\citeproc{ref-vanderweele2018}{2018};
+\citeproc{ref-vanderweele2013}{VanderWeele and Hernan 2013}). The
+authors proved that if the treatment variations, \(K\), are
+conditionally independent of the potential outcomes, \(Y(k)\), given
+covariates \(L\), then conditioning on \(L\) allows us to consistently
+estimate causal effects over the heterogeneous treatments
+(\citeproc{ref-vanderweele2009}{VanderWeele 2009a}).
 
-\centering{
+Where \(\coprod\) denotes independence, we may assume causal consistency
+where the interventions to be compared are independent of their
+potential outcomes, conditional on covariates, \(L\):
 
-\mediationfull
+\[
+K \coprod Y(k) | L
+\]
 
-}
+That is, according to the theory of causal inference under multiple
+versions of treatment, we may think of \(K\) as a `coarsened indicator'
+for \(A\).
 
-\end{table}%
+Notice that the theory allows us to clarify what we require to estimate
+causal effects in the presence of interference or `spill-over', which we
+may consider to be a special case of treatment-effect heterogeneity. To
+handle interference, we say the potential outcome of each unit
+\(i \neq j\) must be independent of its own treatment received as well
+as of the treatment that all other units received on \(j \neq i\),
+conditional on measured covariates \(L\):
 
-\newpage{}
+\[
+Y_i(k) \coprod K_i, K_j | L, \quad \forall i, \forall j \neq i
+\]
 
-\subsection{Appedix D}\label{appedix-d}
+Although the theory of causal inference under multiple versions of
+treatment provides a formal solution to the problem of treatment-effect
+heterogeneity, computing and interpreting causal effect estimates under
+this theory can be challenging.
 
-\subsubsection{Time-varying Confounding: Treatment Confounder
-Feedback}\label{time-varying-confounding-treatment-confounder-feedback}
+Consider the question of whether a reduction in Body Mass Index (BMI)
+affects health (\citeproc{ref-hernuxe1n2008}{Hernán and Taubman 2008}).
+Weight loss can occur through various methods, each with different
+health implications. Specific methods, such as regular exercise or a
+calorie-reduced diet, benefit health. However, weight loss might result
+from adverse conditions such as infectious diseases, cancers,
+depression, famine, or accidental amputations, which we may suppose are
+generally not beneficial to health, at least not in the same way as,
+say, reducing weight by increasing physical activity. Hence, even if
+causal effects of `weight loss' could be consistently estimated when
+adjusting for covariates \(L\) in these settings, we might be uncertain
+about how to interpret the effect we are consistently estimating. This
+uncertainty highlights the need for precise and well-defined causal
+questions. For example, rather than stating the intervention vaguely as
+`weight loss', we could state the intervention clearly and specifically,
+say, `weight loss achieved through aerobic exercise over at least five
+years, compared with no weight loss.' This specificity in the definition
+of the exposure, along with comparable specificity in the statement of
+the outcomes helps to ensure that the causal estimates we obtain are not
+merely unbiased but also interpretable; for discussion see: Hernán
+\emph{et al.} (\citeproc{ref-hernuxe1n2022}{2022}); Murray \emph{et al.}
+(\citeproc{ref-murray2021a}{2021}); Hernán and Taubman
+(\citeproc{ref-hernuxe1n2008}{2008}).
 
-\begin{figure}
+Beyond uncertainties for the interpretation of heterogeneous treatment
+effect estimates, there is, as just mentioned, the additional
+consideration that we cannot fully verify from data whether the measured
+covariates \(L\) suffice to render the multiple versions of treatment
+independent of the counterfactual outcomes. This problem is acute when
+there is \emph{interference}, which occurs when treatment effects are
+relative to the density and distribution of treatment effects in a
+population. Scope for interference will often make it difficult to
+warrant the assumption that the potential outcomes are independent of
+the many versions of treatment that have been realised, dependently, on
+the administration of previous versions of treatments across the
+population (\citeproc{ref-bulbulia2023a}{Bulbulia \emph{et al.} 2023};
+\citeproc{ref-ogburn2022}{Ogburn \emph{et al.} 2022};
+\citeproc{ref-vanderweele2013}{VanderWeele and Hernan 2013}).
 
-\centering{
+In short, although the theory of causal inference under multiple
+versions of treatment provides a formal solution for consistent causal
+effect estimation in observational settings, \emph{treatment
+heterogeneity} remains a practical threat. Generally, we should assume
+that causal consistency is unrealistic unless proven innocent.
 
-\feedbackA
-
-}
-
-\caption{\label{fig-timevarying-amplification}Treatment-confounder
-feedback: statistical SEM fails.}
-
-\end{figure}%
-
-\newpage{}
-
-\subsubsection{Time-varying Confounding in the Absence of
-Treatment-confounder
-feedback}\label{time-varying-confounding-in-the-absence-of-treatment-confounder-feedback}
-
-\begin{figure}
-
-\centering{
-
-\feedbackB
-
-}
-
-\caption{\label{fig-timevarying-nofeedback}Anatomy of bias in
-treatment-confounder feedback}
-
-\end{figure}%
+For now, we note that the causal consistency assumption provides a
+theoretical starting point for recovering the missing counterfactuals
+required for computing causal contrasts. It identifies half of these
+missing counterfactuals directly from observed data. The concept of
+conditional exchangeability, which we explore next, offers a means for
+recovering the remaining half.
 
 \newpage{}
 
@@ -2609,11 +2746,6 @@ Pearl's Do-Calculus and Structural Equation Models
   counterfactual final outcome is: \[
   Y(\bar{A}^\mathbf{d}) = f_Y(A^\mathbf{d}_\tau, H_\tau(\bar{A}^\mathbf{d}_{\tau-1}), U_{Y})
   \]
-\item
-  \textbf{Probability Density Function}: Denote the probability density
-  function of \(A_t\) conditional on the history \(H_t = h_t\) as: \[
-     \text{g}(a_t|h_t)
-     \]
 \end{enumerate}
 
 \newpage{}
@@ -2635,6 +2767,23 @@ Bareinboim, E, and Pearl, J (2013) A general algorithm for deciding
 transportability of experimental results. \emph{Journal of Causal
 Inference}, \textbf{1}(1), 107--134.
 
+\bibitem[\citeproctext]{ref-basten2013}
+Basten, C, and Betz, F (2013) Beyond work ethic: Religion, individual,
+and political preferences. \emph{American Economic Journal: Economic
+Policy}, \textbf{5}(3), 67--91.
+doi:\href{https://doi.org/10.1257/pol.5.3.67}{10.1257/pol.5.3.67}.
+
+\bibitem[\citeproctext]{ref-becker2016}
+Becker, SO, Pfaff, S, and Rubin, J (2016) Causes and consequences of the
+protestant reformation. \emph{Explorations in Economic History},
+\textbf{62}, 1--25.
+
+\bibitem[\citeproctext]{ref-beheim2021}
+Beheim, B, Atkinson, QD, Bulbulia, J, \ldots{} Willard, AK (2021)
+Treatment of missing data determined conclusions regarding moralizing
+gods. \emph{Nature}, \textbf{595}(7866), E29--E34.
+doi:\href{https://doi.org/10.1038/s41586-021-03655-4}{10.1038/s41586-021-03655-4}.
+
 \bibitem[\citeproctext]{ref-bulbulia2024PRACTICAL}
 Bulbulia, J (2024) A practical guide to causal inference in three-wave
 panel studies. \emph{PsyArXiv Preprints}.
@@ -2649,6 +2798,16 @@ doi:\href{https://doi.org/10.1080/2153599X.2022.2070245}{10.1080/2153599X.2022.2
 Bulbulia, JA (2023) Causal diagrams (directed acyclic graphs): A
 practical guide.
 
+\bibitem[\citeproctext]{ref-bulbulia2023a}
+Bulbulia, JA, Afzali, MU, Yogeeswaran, K, and Sibley, CG (2023)
+Long-term causal effects of far-right terrorism in {N}ew {Z}ealand.
+\emph{PNAS Nexus}, \textbf{2}(8), pgad242.
+
+\bibitem[\citeproctext]{ref-bulbuliaj.2013}
+Bulbulia, J., Geertz, AW, Atkinson, QD, \ldots{} Wilson, DS (2013) The
+cultural evolution of religion. In P. J. Richerson and M. Christiansen,
+eds., Cambridge, MA: MIT press, 381--404.
+
 \bibitem[\citeproctext]{ref-cole2008}
 Cole, SR, and Hernán, MA (2008) Constructing inverse probability weights
 for marginal structural models. \emph{American Journal of Epidemiology},
@@ -2660,12 +2819,20 @@ Illustrating bias due to conditioning on a collider. \emph{International
 Journal of Epidemiology}, \textbf{39}(2), 417--420.
 doi:\href{https://doi.org/10.1093/ije/dyp334}{10.1093/ije/dyp334}.
 
+\bibitem[\citeproctext]{ref-collinson2003}
+Collinson, P (2003) \emph{The reformation: A history}, Weidenfeld;
+Nicholson; London, England.
+
 \bibitem[\citeproctext]{ref-danaei2012}
 Danaei, G, Tavakkoli, M, and Hernán, MA (2012) Bias in observational
 studies of prevalent users: lessons for comparative effectiveness
 research from a meta-analysis of statins. \emph{American Journal of
 Epidemiology}, \textbf{175}(4), 250--262.
 doi:\href{https://doi.org/10.1093/aje/kwr301}{10.1093/aje/kwr301}.
+
+\bibitem[\citeproctext]{ref-decoulanges1903}
+De Coulanges, F (1903) \emph{La cité antique: Étude sur le culte, le
+droit, les institutions de la grèce et de rome}, Hachette.
 
 \bibitem[\citeproctext]{ref-diaz2021nonparametric}
 Dı́az, I, Hejazi, NS, Rudolph, KE, and Der Laan, MJ van (2021)
@@ -2676,6 +2843,15 @@ Nonparametric efficient causal mediation with intermediate confounders.
 Dı́az, I, Williams, N, and Rudolph, KE (2023) \emph{Journal of Causal
 Inference}, \textbf{11}(1), 20220077.
 doi:\href{https://doi.org/doi:10.1515/jci-2022-0077}{doi:10.1515/jci-2022-0077}.
+
+\bibitem[\citeproctext]{ref-gawthrop1984}
+Gawthrop, R, and Strauss, G (1984) Protestantism and literacy in early
+modern germany. \emph{Past \& Present}, (104), 31--55.
+
+\bibitem[\citeproctext]{ref-geertz2013}
+Geertz, AW, Atkinson, QD, Cohen, E, \ldots{} Wilson, DS (2013) The
+cultural evolution of religion. In P. J. Richerson and M. Christiansen,
+eds., Cambridge, MA: MIT press, 381--404.
 
 \bibitem[\citeproctext]{ref-greenland2003quantifying}
 Greenland, S (2003) Quantifying biases in causal models: Classical
@@ -2708,8 +2884,15 @@ Hernán, MA (2017) Invited commentary: Selection bias without colliders
 \emph{American Journal of Epidemiology}, \textbf{185}(11), 1048--1050.
 Retrieved from \url{https://doi.org/10.1093/aje/kwx077}
 
+\bibitem[\citeproctext]{ref-hernan2008aObservationalStudiesAnalysedLike}
+Hernán, MA, Alonso, A, Logan, R, \ldots{} Robins, JM (2008b)
+Observational studies analyzed like randomized experiments: An
+application to postmenopausal hormone therapy and coronary heart
+disease. \emph{Epidemiology}, \textbf{19}(6), 766.
+doi:\href{https://doi.org/10.1097/EDE.0b013e3181875e61}{10.1097/EDE.0b013e3181875e61}.
+
 \bibitem[\citeproctext]{ref-hernuxe1n2008a}
-Hernán, MA, Alonso, A, Logan, R, \ldots{} Robins, JM (2008)
+Hernán, MA, Alonso, A, Logan, R, \ldots{} Robins, JM (2008a)
 Observational studies analyzed like randomized experiments: An
 application to postmenopausal hormone therapy and coronary heart
 disease. \emph{Epidemiology}, \textbf{19}(6), 766.
@@ -2726,13 +2909,14 @@ Hernán, MA, Hernández-Díaz, S, and Robins, JM (2004) A structural
 approach to selection bias. \emph{Epidemiology}, \textbf{15}(5),
 615--625. Retrieved from \url{https://www.jstor.org/stable/20485961}
 
-\bibitem[\citeproctext]{ref-hernan2006estimating}
-Hernán, MA, and Robins, JM (2006b) Estimating causal effects from
-epidemiological data. \emph{Journal of Epidemiology \& Community
-Health}, \textbf{60}(7), 578--586.
-
 \bibitem[\citeproctext]{ref-hernuxe1n2006}
 Hernán, MA, and Robins, JM (2006a) Estimating causal effects from
+epidemiological data. \emph{Journal of Epidemiology \& Community
+Health}, \textbf{60}(7), 578--586.
+doi:\href{https://doi.org/10.1136/jech.2004.029496}{10.1136/jech.2004.029496}.
+
+\bibitem[\citeproctext]{ref-hernan2006estimating}
+Hernán, MA, and Robins, JM (2006b) Estimating causal effects from
 epidemiological data. \emph{Journal of Epidemiology \& Community
 Health}, \textbf{60}(7), 578--586.
 doi:\href{https://doi.org/10.1136/jech.2004.029496}{10.1136/jech.2004.029496}.
@@ -2752,6 +2936,13 @@ Hernán, MA, Sauer, BC, Hernández-Díaz, S, Platt, R, and Shrier, I
 (2016b) Specifying a target trial prevents immortal time bias and other
 self-inflicted injuries in observational analyses. \emph{Journal of
 Clinical Epidemiology}, \textbf{79}, 70--75.
+
+\bibitem[\citeproctext]{ref-hernuxe1n2008}
+Hernán, MA, and Taubman, SL (2008) Does obesity shorten life? The
+importance of well-defined interventions to answer causal questions.
+\emph{International Journal of Obesity (2005)}, \textbf{32 Suppl 3},
+S8--14.
+doi:\href{https://doi.org/10.1038/ijo.2008.82}{10.1038/ijo.2008.82}.
 
 \bibitem[\citeproctext]{ref-hernuxe1n2022}
 Hernán, MA, Wang, W, and Leaf, DE (2022) Target trial emulation: A
@@ -2778,6 +2969,11 @@ Imai, K, King, G, and Stuart, EA (2008) Misunderstandings between
 experimentalists and observationalists about causal inference.
 \emph{Journal of the Royal Statistical Society Series A: Statistics in
 Society}, \textbf{171}(2), 481--502.
+
+\bibitem[\citeproctext]{ref-johnson2015}
+Johnson, DD (2015) Big gods, small wonder: Supernatural punishment
+strikes back. \emph{Religion, Brain \& Behavior}, \textbf{5}(4),
+290--298.
 
 \bibitem[\citeproctext]{ref-van2012targeted}
 Laan, MJ van der, and Gruber, S (2012) Targeted minimum loss based
@@ -2823,6 +3019,17 @@ It. \emph{American Journal of Political Science}, \textbf{62}(3),
 760--775.
 doi:\href{https://doi.org/10.1111/ajps.12357}{10.1111/ajps.12357}.
 
+\bibitem[\citeproctext]{ref-murray2021a}
+Murray, EJ, Marshall, BDL, and Buchanan, AL (2021) Emulating target
+trials to improve causal inference from agent-based models.
+\emph{American Journal of Epidemiology}, \textbf{190}(8), 1652--1658.
+doi:\href{https://doi.org/10.1093/aje/kwab040}{10.1093/aje/kwab040}.
+
+\bibitem[\citeproctext]{ref-nalle1987}
+Nalle, ST (1987) Inquisitors, priests, and the people during the
+catholic reformation in spain. \emph{The Sixteenth Century Journal},
+557--587.
+
 \bibitem[\citeproctext]{ref-neal2020introduction}
 Neal, B (2020) Introduction to causal inference from a machine learning
 perspective. \emph{Course Lecture Notes (Draft)}. Retrieved from
@@ -2834,10 +3041,22 @@ Neurath, O (1973) Anti-spengler. In M. Neurath and R. S. Cohen, eds.,
 158--213.
 doi:\href{https://doi.org/10.1007/978-94-010-2525-6_6}{10.1007/978-94-010-2525-6\_6}.
 
+\bibitem[\citeproctext]{ref-norenzayan2016}
+Norenzayan, A, Shariff, AF, Gervais, WM, \ldots{} Henrich, J (2016) The
+cultural evolution of prosocial religions. \emph{Behavioral and Brain
+Sciences}, \textbf{39}, e1.
+doi:\href{https://doi.org/10.1017/S0140525X14001356}{10.1017/S0140525X14001356}.
+
 \bibitem[\citeproctext]{ref-ogburn2021}
 Ogburn, EL, and Shpitser, I (2021) Causal modelling: The two cultures.
 \emph{Observational Studies}, \textbf{7}(1), 179--183.
 doi:\href{https://doi.org/10.1353/obs.2021.0006}{10.1353/obs.2021.0006}.
+
+\bibitem[\citeproctext]{ref-ogburn2022}
+Ogburn, EL, Sofrygin, O, Díaz, I, and Laan, MJ van der (2022) Causal
+inference for social network data. \emph{Journal of the American
+Statistical Association}, \textbf{0}(0), 1--15.
+doi:\href{https://doi.org/10.1080/01621459.2022.2131557}{10.1080/01621459.2022.2131557}.
 
 \bibitem[\citeproctext]{ref-pearl1988}
 Pearl, J (1988) \emph{Probabilistic reasoning in intelligent systems:
@@ -2900,6 +3119,18 @@ multiple mediators and multiple intermediate confounders}.
 \emph{Biostatistics}, kxae012.
 doi:\href{https://doi.org/10.1093/biostatistics/kxae012}{10.1093/biostatistics/kxae012}.
 
+\bibitem[\citeproctext]{ref-sheehan2022}
+Sheehan, O, Watts, J, Gray, RD, \ldots{} Atkinson, QD (2022) Coevolution
+of religious and political authority in austronesian societies.
+\emph{Nature Human Behaviour}.
+doi:\href{https://doi.org/10.1038/s41562-022-01471-y}{10.1038/s41562-022-01471-y}.
+
+\bibitem[\citeproctext]{ref-shiba2023uncovering}
+Shiba, K, Daoud, A, Hikichi, H, \ldots{} Kawachi, I (2023) Uncovering
+heterogeneous associations between disaster-related trauma and
+subsequent functional limitations: A machine-learning approach.
+\emph{American Journal of Epidemiology}, \textbf{192}(2), 217--229.
+
 \bibitem[\citeproctext]{ref-shpitser2022multivariate}
 Shpitser, I, Richardson, TS, and Robins, JM (2022) Multivariate
 counterfactual systems and causal graphical models. In
@@ -2910,6 +3141,11 @@ counterfactual systems and causal graphical models. In
 Shpitser, I, and Tchetgen, ET (2016) Causal inference with a graphical
 hierarchy of interventions. \emph{Annals of Statistics}, \textbf{44}(6),
 2433.
+
+\bibitem[\citeproctext]{ref-slingerland2020coding}
+Slingerland, E, Atkinson, QD, Ember, CR, \ldots{} Gray, RD (2020) Coding
+culture: Challenges and recommendations for comparative cultural
+databases. \emph{Evolutionary Human Sciences}, \textbf{2}, e29.
 
 \bibitem[\citeproctext]{ref-stensrud2023conditional}
 Stensrud, MJ, Robins, JM, Sarvet, A, Tchetgen Tchetgen, EJ, and Young,
@@ -2928,6 +3164,15 @@ Pitfalls and Tips. \emph{Journal of Epidemiology}, \textbf{30}(4),
 153--162.
 doi:\href{https://doi.org/10.2188/jea.JE20190192}{10.2188/jea.JE20190192}.
 
+\bibitem[\citeproctext]{ref-swanson1967}
+Swanson, GE (1967) Religion and regime: A sociological account of the
+{R}eformation.
+
+\bibitem[\citeproctext]{ref-swanson1971}
+Swanson, GE (1971) Interpreting the reformation. \emph{The Journal of
+Interdisciplinary History}, \textbf{1}(3), 419--446. Retrieved from
+\url{http://www.jstor.org/stable/202620}
+
 \bibitem[\citeproctext]{ref-vanderlaan2011}
 Van Der Laan, MJ, and Rose, S (2011) \emph{Targeted Learning: Causal
 Inference for Observational and Experimental Data}, New York, NY:
@@ -2940,13 +3185,23 @@ Science: Causal Inference for Complex Longitudinal Studies}, Cham:
 Springer International Publishing. Retrieved from
 \url{http://link.springer.com/10.1007/978-3-319-65304-4}
 
+\bibitem[\citeproctext]{ref-vanderweele2009}
+VanderWeele, TJ (2009a) Concerning the consistency assumption in causal
+inference. \emph{Epidemiology}, \textbf{20}(6), 880.
+doi:\href{https://doi.org/10.1097/EDE.0b013e3181bd5638}{10.1097/EDE.0b013e3181bd5638}.
+
 \bibitem[\citeproctext]{ref-vanderweele2009a}
-VanderWeele, TJ (2009) Marginal structural models for the estimation of
+VanderWeele, TJ (2009b) Marginal structural models for the estimation of
 direct and indirect effects. \emph{Epidemiology}, 18--26.
 
 \bibitem[\citeproctext]{ref-vanderweele2015}
 VanderWeele, TJ (2015) \emph{Explanation in causal inference: Methods
 for mediation and interaction}, Oxford University Press.
+
+\bibitem[\citeproctext]{ref-vanderweele2018}
+VanderWeele, TJ (2018) On well-defined hypothetical interventions in the
+potential outcomes framework. \emph{Epidemiology}, \textbf{29}(4), e24.
+doi:\href{https://doi.org/10.1097/EDE.0000000000000823}{10.1097/EDE.0000000000000823}.
 
 \bibitem[\citeproctext]{ref-vanderweele2019}
 VanderWeele, TJ (2019) Principles of confounder selection.
@@ -2957,6 +3212,11 @@ VanderWeele, TJ (2022) Constructed measures and causal inference:
 Towards a new model of measurement for psychosocial constructs.
 \emph{Epidemiology}, \textbf{33}(1), 141.
 doi:\href{https://doi.org/10.1097/EDE.0000000000001434}{10.1097/EDE.0000000000001434}.
+
+\bibitem[\citeproctext]{ref-vanderweele2013}
+VanderWeele, TJ, and Hernan, MA (2013) Causal inference under multiple
+versions of treatment. \emph{Journal of Causal Inference},
+\textbf{1}(1), 1--20.
 
 \bibitem[\citeproctext]{ref-vanderweele2012MEASUREMENT}
 VanderWeele, TJ, and Hernán, MA (2012) Results on differential and
@@ -2988,6 +3248,26 @@ treatment effects using random forests. \emph{Journal of the American
 Statistical Association}, \textbf{113}(523), 1228--1242.
 doi:\href{https://doi.org/10.1080/01621459.2017.1319839}{10.1080/01621459.2017.1319839}.
 
+\bibitem[\citeproctext]{ref-watts2015}
+Watts, J, Greenhill, SJ, Atkinson, QD, Currie, TE, Bulbulia, J, and
+Gray, RD (2015) \emph{Broad supernatural punishment but not moralizing
+high gods precede the evolution of political complexity in
+{A}ustronesia} \emph{Proceedings of the Royal Society B: Biological
+Sciences}, Vol. 282, The Royal Society, 20142556.
+
+\bibitem[\citeproctext]{ref-watts2018}
+Watts, J, Sheehan, O, Bulbulia, Joseph A, Gray, RD, and Atkinson, QD
+(2018) Christianity spread faster in small, politically structured
+societies. \emph{Nature Human Behaviour}, \textbf{2}(8), 559--564.
+doi:\href{https://doi.org/gdvnjn}{gdvnjn}.
+
+\bibitem[\citeproctext]{ref-weber1905}
+Weber, M (1905) \emph{The protestant ethic and the spirit of capitalism:
+And other writings}, Penguin.
+
+\bibitem[\citeproctext]{ref-weber1993}
+Weber, M (1993) \emph{The sociology of religion}, Beacon Press.
+
 \bibitem[\citeproctext]{ref-webster2021directed}
 Webster-Clark, M, and Breskin, A (2021) Directed acyclic graphs, effect
 measure modification, and generalizability. \emph{American Journal of
@@ -3014,6 +3294,18 @@ doi:\href{https://doi.org/10.1093/aje/kwx164}{10.1093/aje/kwx164}.
 Westreich, D, and Greenland, S (2013) The table 2 fallacy: Presenting
 and interpreting confounder and modifier coefficients. \emph{American
 Journal of Epidemiology}, \textbf{177}(4), 292--298.
+
+\bibitem[\citeproctext]{ref-wheatley1971}
+Wheatley, P (1971) \emph{The pivot of the four quarters : A preliminary
+enquiry into the origins and character of the ancient chinese city},
+Edinburgh University Press. Retrieved from
+\url{https://cir.nii.ac.jp/crid/1130000795717727104}
+
+\bibitem[\citeproctext]{ref-whitehouse2023}
+Whitehouse, H, Francois, P, Savage, PE, \ldots{} Turchin, P (2023)
+Testing the big gods hypothesis with global historical data: A review
+and retake. \emph{Religion, Brain \& Behavior}, \textbf{13}(2),
+124--166.
 
 \bibitem[\citeproctext]{ref-williams2021}
 Williams, NT, and Díaz, I (2021) \emph{{l}mtp: Non-parametric causal
